--- a/pages/19927.html
+++ b/pages/19927.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      Jan Raphael Høegh-Krohn in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      Jan Raphael Høegh-Krohn
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9257/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -306,83 +308,62 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body><div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mrow><mtable><mtr><mtd><mtext>relativistic field theory</mtext></mtd></mtr> <mtr><mtd><mtext>on Minkowski spacetime</mtext></mtd></mtr> <mtr><mtd><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mtd></mtr> <mtr><mtd><mtext>in a thermal equilibrium state</mtext></mtd></mtr> <mtr><mtd><mtext>at temperature</mtext><mspace width="thickmathspace"></mspace><mi>T</mi></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mover><mo>↔</mo><mtext>Wick rotation</mtext></mover><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Euclidean field theory</mtext></mtd></mtr> <mtr><mtd><mtext>on Euclidean space</mtext></mtd></mtr> <mtr><mtd><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mtd></mtr> <mtr><mtd><mtext>with compact/periodic Euclidean time</mtext></mtd></mtr> <mtr><mtd><mtext>of length</mtext><mspace width="thickmathspace"></mspace><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mtd></mtr></mtable></mrow></mrow></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><munder><munder><mrow><msub><mrow><mo>⟨</mo><mi>T</mi><mo stretchy="false">|</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mo>:</mo><mo stretchy="false">|</mo><mi>T</mi><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mtext>n-point function of relativistic fields</mtext></mrow><mrow><mtext> in thermal equilibrium state </mtext><mspace width="thickmathspace"></mspace><mo stretchy="false">|</mo><mi>T</mi><mo stretchy="false">⟩</mo></mrow></mfrac></munder></mtd> <mtd><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace></mtd> <mtd><munder><munder><mrow><msub><mrow><mo>⟨</mo><mn>0</mn><mo stretchy="false">|</mo><mo stretchy="false">⟨</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo>:</mo><mo stretchy="false">|</mo><mn>0</mn><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow></msub></mrow><mo>⏟</mo></munder><mtext>correlator of Euclidean fields</mtext></munder></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
-  \array{
-  \left.
-  \array{
-     \text{relativistic field theory}
-     \\
-     \text{on Minkowski spacetime}
-     \\
-     \mathbb{R}^{d,1}
-     \\
-     \text{in a thermal equilibrium state}
-     \\
-     \text{at temperature}\; T
-  }
-  \right\}
-  &amp;
-  \;\;\;\;
-  \overset{ \text{Wick rotation} }{\leftrightarrow}
-  \;\;\;\;
-  &amp;
-  \left\{
-  \array{
-    \text{Euclidean field theory}
-    \\
-    \text{on Euclidean space}
-    \\
-    \mathbb{R}^d \times S^1_{\beta}
-    \\
-    \text{with compact/periodic Euclidean time}
-    \\
-    \text{of length} \; \beta = 1/T
-  }
-  \right.
-  \\
-  \phantom{A}
-  \\
-  \underset{
-    \text{n-point function of relativistic fields}
-    \atop
-    \text{ in thermal equilibrium state } \; \vert T\rangle
-  }{
-  \underbrace{
-    \left\langle  T\vert  :\mathbf{\Phi}(x_1,t) \mathbf{\Phi}(x_2,t) \cdots \mathbf{\Phi}(x_n,t) : \vert T \right\rangle_{\mathbb{R}^{d,1}}
-  }}
-  &amp;\;=\;&amp;
-  \underset{
-    \text{correlator of Euclidean fields}
-  }{
-  \underbrace{
-  \left\langle 0 \vert \langle  :\mathbf{\Phi}(x_1) \mathbf{\Phi}(x_2) \cdots \mathbf{\Phi}(x_n) : \vert 0 \right\rangle_{\mathbb{R}^{d} \times S^1_{\beta}}
-  }}
-  }
+    <p>
+</p>
 
-</annotation></semantics></math></div></body></html>
+<ul>
+<li>
+<p><a href='https://en.wikipedia.org/wiki/Raphael_H%C3%B8egh-Krohn'>Wikipedia entry</a></p>
+</li>
 
+<li>
+<p><a href='https://www.genealogy.math.ndsu.nodak.edu/id.php?id=33449'>Mathematics genealogy page</a></p>
+</li>
+</ul>
+
+<h2 id='selected_writings'>selected writings</h2>
+
+<ul>
+<li id='HoeghKrohn74'><a class='existingWikiWord' href='/nlab/show/Jan+Raphael+H%C3%B8egh-Krohn'>Raphael Høegh-Krohn</a>, <em>Relativistic Quantum Statistical Mechanics in two-dimensional Space-Time</em>, Communications in Mathematical Physics 38.3 (1974): 195-224 (<a href='https://www.duo.uio.no/bitstream/handle/10852/44072/1973-22.pdf'>pdf</a>)</li>
+</ul>
+
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_8daf989e3e16a76b3941844ffba1eda843cfeaf9_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euclidean+field+theory'>Euclidean field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euclidean+field+theory'>thermal quantum field theory</a></p>
+</li>
+</ul>
+
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November  9, 2018 at 04:08:15.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November  9, 2018 at 04:36:09.
+  See the <a href="https://ncatlab.org/nlab/history/Jan Raphael Høegh-Krohn" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1718" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1718 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Jan+Raphael+H%C3%B8egh-Krohn" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Jan Raphael Høegh-Krohn/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Jan+Raphael+H%C3%B8egh-Krohn" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Jan+Raphael+H%C3%B8egh-Krohn" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Jan+Raphael+H%C3%B8egh-Krohn" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
