--- a/pages/3633.html
+++ b/pages/3633.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5042/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5042/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1352,9 +1352,68 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>What is called <em>Wick rotation</em> (after <a class="existingWikiWord" href="/nlab/show/Gian-Carlo+Wick">Gian-Carlo Wick</a>) is a method in <a class="existingWikiWord" href="/nlab/show/physics">physics</a> for finding a construction in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> or, more generally, on <a class="existingWikiWord" href="/nlab/show/Lorentzian+manifolds">Lorentzian manifolds</a>, from a related construction in <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> on <a class="existingWikiWord" href="/nlab/show/Riemannian+manifolds">Riemannian manifolds</a>. This is motivated by the observation that the <a class="existingWikiWord" href="/nlab/show/Minkowski+metric">Minkowski metric</a> (with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">-1,1,1,1</annotation></semantics></math> convention) and the four-Euclidean metric are equivalent if the <a class="existingWikiWord" href="/nlab/show/time">time</a> components of either are allowed to have <a class="existingWikiWord" href="/nlab/show/imaginary+part">imaginary</a> values.</p>
+<p>What is called <em>Wick rotation</em> (after <a class="existingWikiWord" href="/nlab/show/Gian-Carlo+Wick">Gian-Carlo Wick</a>) is a method in <a class="existingWikiWord" href="/nlab/show/physics">physics</a> for finding a construction in <a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> or, more generally, on <a class="existingWikiWord" href="/nlab/show/Lorentzian+manifolds">Lorentzian manifolds</a>, from a related construction in <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> on <a class="existingWikiWord" href="/nlab/show/Riemannian+manifolds">Riemannian manifolds</a>. This is motivated by the observation that the <a class="existingWikiWord" href="/nlab/show/Minkowski+metric">Minkowski metric</a> (with the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>1</mn><mo>,</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">-1,1,1,1</annotation></semantics></math> convention) and the four-Euclidean metric are equivalent if the <a class="existingWikiWord" href="/nlab/show/time">time</a> components of either are allowed to have <a class="existingWikiWord" href="/nlab/show/imaginary+part">imaginary</a> values. Hence Wick rotation, when it applies, involves <a class="existingWikiWord" href="/nlab/show/analytic+continuation">analytic continuation</a> of <a class="existingWikiWord" href="/nlab/show/n-point+functions">n-point functions</a> to <a class="existingWikiWord" href="/nlab/show/complex+number">complex vaklued</a> <a class="existingWikiWord" href="/nlab/show/time">time</a> <a class="existingWikiWord" href="/nlab/show/coordinates">coordinates</a>.</p>
 
 <p>In some special cases Wick rotation has been rigorously understood and takes the form of a <a class="existingWikiWord" href="/nlab/show/theorem">theorem</a>. Notably the <em><a class="existingWikiWord" href="/nlab/show/Osterwalder-Schrader+theorem">Osterwalder-Schrader theorem</a></em> gives a precise meaning to Wick rotation for <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a> on <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> formalized by the <a class="existingWikiWord" href="/nlab/show/axioms">axioms</a> of <a class="existingWikiWord" href="/nlab/show/AQFT">AQFT</a>.</p>
+
+<p>More generally, in this context Wick rotation applies to relativistic field theory in <a class="existingWikiWord" href="/nlab/show/thermal+equilibrium">thermal equilibrium</a> <a class="existingWikiWord" href="/nlab/show/states">states</a> at finite <a class="existingWikiWord" href="/nlab/show/temperature">temperature</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math>, and then relates this to <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a> with compact/periodic Euclidean time of length <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow><annotation encoding="application/x-tex">\beta = 1/T</annotation></semantics></math>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable><mtr><mtd><mrow><mrow><mtable><mtr><mtd><mtext>relativistic field theory</mtext></mtd></mtr> <mtr><mtd><mtext>on Minkowski spacetime</mtext></mtd></mtr> <mtr><mtd><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mtd></mtr> <mtr><mtd><mtext>in a thermal equilibrium state</mtext></mtd></mtr> <mtr><mtd><mtext>at temperature</mtext><mspace width="thickmathspace"></mspace><mi>T</mi></mtd></mtr></mtable></mrow><mo>}</mo></mrow></mtd> <mtd><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mover><mo>↔</mo><mtext>Wick rotation</mtext></mover><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace><mspace width="thickmathspace"></mspace></mtd> <mtd><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mtext>Euclidean field theory</mtext></mtd></mtr> <mtr><mtd><mtext>on Euclidean space</mtext></mtd></mtr> <mtr><mtd><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mtd></mtr> <mtr><mtd><mtext>with compact/periodic Euclidean time</mtext></mtd></mtr> <mtr><mtd><mtext>of length</mtext><mspace width="thickmathspace"></mspace><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mtd></mtr></mtable></mrow></mrow></mtd></mtr> <mtr><mtd><mphantom><mi>A</mi></mphantom></mtd></mtr> <mtr><mtd><munder><munder><mrow><msub><mrow><mo>⟨</mo><mi>T</mi><mo stretchy="false">|</mo><mo>:</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo>,</mo><mi>t</mi><mo stretchy="false">)</mo><mo>:</mo><mo stretchy="false">|</mo><mi>T</mi><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mrow><mi>d</mi><mo>,</mo><mn>1</mn></mrow></msup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mtext>n-point function of relativistic fields</mtext></mrow><mrow><mtext> in thermal equilibrium state </mtext><mspace width="thickmathspace"></mspace><mo stretchy="false">|</mo><mi>T</mi><mo stretchy="false">⟩</mo></mrow></mfrac></munder></mtd> <mtd><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace></mtd> <mtd><munder><munder><mrow><msub><mrow><mo>⟨</mo><mn>0</mn><mo stretchy="false">|</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mi>⋯</mi><mstyle mathvariant="bold"><mi>Φ</mi></mstyle><mo stretchy="false">(</mo><msub><mi>x</mi> <mi>n</mi></msub><mo stretchy="false">)</mo><mo stretchy="false">|</mo><mn>0</mn><mo>⟩</mo></mrow> <mrow><msup><mi>ℝ</mi> <mi>d</mi></msup><mo>×</mo><msubsup><mi>S</mi> <mi>β</mi> <mn>1</mn></msubsup></mrow></msub></mrow><mo>⏟</mo></munder><mfrac linethickness="0"><mrow><mtext>correlator of Euclidean fields</mtext></mrow><mrow><mtext> for "Eculidean time" of periodicity</mtext><mspace width="thickmathspace"></mspace><mi>β</mi><mo>=</mo><mn>1</mn><mo stretchy="false">/</mo><mi>T</mi></mrow></mfrac></munder></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+  \array{
+  \left.
+  \array{
+     \text{relativistic field theory}
+     \\
+     \text{on Minkowski spacetime}
+     \\
+     \mathbb{R}^{d,1}
+     \\
+     \text{in a thermal equilibrium state}
+     \\
+     \text{at temperature}\; T
+  }
+  \right\}
+  &amp;
+  \;\;\;\;
+  \overset{ \text{Wick rotation} }{\leftrightarrow}
+  \;\;\;\;
+  &amp;
+  \left\{
+  \array{
+    \text{Euclidean field theory}
+    \\
+    \text{on Euclidean space}
+    \\
+    \mathbb{R}^d \times S^1_{\beta}
+    \\
+    \text{with compact/periodic Euclidean time}
+    \\
+    \text{of length} \; \beta = 1/T
+  }
+  \right.
+  \\
+  \phantom{A}
+  \\
+  \underset{
+    \text{n-point function of relativistic fields}
+    \atop
+    \text{ in thermal equilibrium state } \; \vert T\rangle
+  }{
+  \underbrace{
+    \left\langle  T\vert  :\mathbf{\Phi}(x_1,t) \mathbf{\Phi}(x_2,t) \cdots \mathbf{\Phi}(x_n,t) : \vert T \right\rangle_{\mathbb{R}^{d,1}}
+  }}
+  &amp;\;=\;&amp;
+  \underset{
+    \text{correlator of Euclidean fields}
+    \atop
+    \text{ for "Eculidean time" of periodicity}\; \beta = 1/T
+  }{
+  \underbrace{
+  \left\langle 0 \vert \mathbf{\Phi}(x_1) \mathbf{\Phi}(x_2) \cdots \mathbf{\Phi}(x_n)  \vert 0 \right\rangle_{\mathbb{R}^{d} \times S^1_{\beta}}
+  }}
+  }
+
+</annotation></semantics></math></div>
+<p>In this form, Wick rotation is also known as <em><a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a></em>. See there for more.</p>
 
 <p>However, Wick rotation is sometimes also appealed to in situations where the assumptions of theorems like this are evidently violated. For instance, it has been appealed to a lot in an approach to <a class="existingWikiWord" href="/nlab/show/quantum+gravity">quantum gravity</a> often known as “Euclidean quantum gravity”, where, however, by definition the assumption of global spacetime translation invariance is manifestly violated. In such a context the exact meaning of Wick rotation remains mysterious, and yet on this basis some subtle relations between quantum mechanics and thermodynamics, such as the <a class="existingWikiWord" href="/nlab/show/Bekenstein-Hawking+entropy">Bekenstein-Hawking entropy</a>, find elegant explanations, at least at the level of the manipulation of formulas.</p>
 
@@ -1400,7 +1459,19 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>For relation to <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a> see</p>
+<p>The idea of Wick rotating thermal relativistic field theory to compact periodic Euclidean time apparently goes back to</p>
+
+<ul>
+<li id="Bloch58">Claude Bloch, <em>Sur la détermination de l’état fondamental d’un système de particules</em>, Nucl. Phys. 7 (1958) 451</li>
+</ul>
+
+<p>This has maybe first been made precise, for the case of 1+1 dimensions, in</p>
+
+<ul>
+<li id="HoeghKrohn74"><a class="existingWikiWord" href="/nlab/show/Raphael+H%C3%B8egh-Krohn">Raphael Høegh-Krohn</a>, <em>Relativistic Quantum Statistical Mechanics in two-dimensional Space-Time</em>, Communications in Mathematical Physics 38.3 (1974): 195-224 (<a href="https://www.duo.uio.no/bitstream/handle/10852/44072/1973-22.pdf">pdf</a>)</li>
+</ul>
+
+<p>Good review on the relation to <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal quantum field theory</a> is in</p>
 
 <ul>
 <li id="FullingRuijsenaars87">S.A. Fulling, S.N.M. Ruijsenaars, <em>Temperature, periodicity and horizons</em>, Physics Reports Volume 152, Issue 3, August 1987, Pages 135-176 (<a href="https://www1.maths.leeds.ac.uk/~siru/papers/p26.pdf">pdf</a>, <a href="https://doi.org/10.1016/0370-1573(87)90136-0">doi:10.1016/0370-1573(87)90136-0</a>)</li>
@@ -1411,14 +1482,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  8, 2018 at 14:13:37.
+  Last revised on November  9, 2018 at 04:49:59.
   See the <a href="https://ncatlab.org/nlab/history/Wick rotation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Wick+rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick+rotation/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/Wick+rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick+rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Wick+rotation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Wick+rotation/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/Wick+rotation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Wick+rotation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Wick rotation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
