--- a/pages/2623.html
+++ b/pages/2623.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -317,7 +317,15 @@ margin-left: 0em;
 
 <h4 id="algebraic_quantum_field_theory">Algebraic Quantum Field Theory</h4>
 
-<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>: <a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
+<div class="hide"><p><strong><a class="existingWikiWord" href="/nlab/show/algebraic+quantum+field+theory">algebraic quantum field theory</a></strong> (<a class="existingWikiWord" href="/nlab/show/perturbative+AQFT">perturbative</a>, <a class="existingWikiWord" href="/nlab/show/AQFT+on+curved+spacetime">on curved spacetimes</a>, <a class="existingWikiWord" href="/nlab/show/homotopical+algebraic+quantum+field+theory">homotopical</a>)</p><p><a class="existingWikiWord" href="/nlab/show/A+first+idea+of+quantum+field+theory">Introduction</a></p><h2 id="concepts">Concepts</h2><p><strong><a class="existingWikiWord" href="/nlab/show/field+theory">field theory</a></strong>:</p><ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/classical+field+theory">classical</a>, <a class="existingWikiWord" href="/nlab/show/prequantum+field+theory">pre-quantum</a>, <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum</a>, <a class="existingWikiWord" href="/nlab/show/perturbative+quantum+field+theory">perturbative quantum</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/relativistic+field+theory">relativistic</a>, <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean</a>, <a class="existingWikiWord" href="/nlab/show/thermal+quantum+field+theory">thermal</a></p>
+</li>
+</ul><p><strong><a class="existingWikiWord" href="/nlab/show/Lagrangian+field+theory">Lagrangian field theory</a></strong></p><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field (physics)</a></p>
 
@@ -5345,7 +5353,7 @@ margin-left: 0em;
 
 <h3 id="ReferencesOnCompactifiedConfigurationSpaces">On compactified configuration spaces</h3>
 
-<p>An alternative to regarding <a class="existingWikiWord" href="/nlab/show/propagators">propagators</a>/<a class="existingWikiWord" href="/nlab/show/time-ordered+products">time-ordered products</a>/<a class="existingWikiWord" href="/nlab/show/Feynman+amplitudes">Feynman amplitudes</a> as <a class="existingWikiWord" href="/nlab/show/distributions+of+several+variables">distributions of several variables</a> with <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a> at (in particular) coincident points, one may <a class="existingWikiWord" href="/nlab/show/pullback+of+differential+forms">pullback</a> these distributions to <a class="existingWikiWord" href="/nlab/show/smooth+functions">smooth functions</a> on <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactifications">Fulton-MacPherson compactifications</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces">configuration spaces</a> of points and study renormalization in that perspective.</p>
+<p>For <a class="existingWikiWord" href="/nlab/show/Euclidean+field+theory">Euclidean field theory</a>, an alternative to regarding <a class="existingWikiWord" href="/nlab/show/propagators">propagators</a>/<a class="existingWikiWord" href="/nlab/show/time-ordered+products">time-ordered products</a>/<a class="existingWikiWord" href="/nlab/show/Feynman+amplitudes">Feynman amplitudes</a> as <a class="existingWikiWord" href="/nlab/show/distributions+of+several+variables">distributions of several variables</a> with <a class="existingWikiWord" href="/nlab/show/singularities">singularities</a> at (in particular) coincident points, one may <a class="existingWikiWord" href="/nlab/show/pullback+of+differential+forms">pullback</a> these distributions to <a class="existingWikiWord" href="/nlab/show/smooth+functions">smooth functions</a> on <a class="existingWikiWord" href="/nlab/show/Fulton-MacPherson+compactifications">Fulton-MacPherson compactifications</a> of <a class="existingWikiWord" href="/nlab/show/configuration+spaces">configuration spaces</a> of points and study renormalization in that perspective.</p>
 
 <p>This approach was originally considered specifically for <a class="existingWikiWord" href="/nlab/show/Chern-Simons+theory">Chern-Simons theory</a> in</p>
 
@@ -5410,14 +5418,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November  5, 2018 at 06:49:35.
+  Last revised on November  9, 2018 at 06:12:02.
   See the <a href="https://ncatlab.org/nlab/history/renormalization" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/renormalization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/renormalization/106" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(106 revisions)</span> | <a href="/nlab/show/diff/renormalization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/renormalization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/renormalization" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/renormalization/107" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(107 revisions)</span> | <a href="/nlab/show/diff/renormalization" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/renormalization" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/renormalization/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
